# CI-Lab

./: .gitignore  CMakeLists.txt  README.md  WinVision.iss
.github/workflows/: codeql.yml  flawfinder.yml  msvc.yml  windows-ci.yml
ImageCore/: Image.cpp  Image.h  ImageCore.vcxproj  ImageCore.vcxproj.filters  ImageFilter.cpp  ImageFilter.h  ImageIO.cpp  ImageIO.h  ImageStats.cpp  ImageStats.h
ImageCoreTests/: ImageCoreTests.cpp  ImageCoreTests.vcxproj
WinVision/: App.h  Resource.h  WinVision.cpp  WinVision.h  WinVision.rc  WinVision.vcxproj  WinVision.vcxproj.filters  WinVisionApp.cpp  WinVisionDlg.cpp  WinVisionDlg.h
WinVision-CI-Lab/: WinVision-CI-Lab.sln  WinVision-CI-Lab.vcxproj
WinVision/res/: WinVision.rc2
WinVision/x64/Release/: WinVision.res
installer/: WinVision.iss
